kubernetes/apps/media/komga/app/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: komga
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`komga.kube.home.arpa`)
      kind: Rule
      services:
        - name: komga
          port: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: komga-external-dns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: komga.kube.home.arpa
